--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="content-box">
     <main>
       <h1>Welcome to Metro Online</h1>
-      <div class="content">
+      <div class="content-box2">
         <p>Добро пожаловать в Метро Онлайн, где вам предстоит не исследовать, а выживать в опасном и загадочном мире подземелья. Вас ждет множество возможностей для создания своего транспорта из доступных материалов, как дрезины, лодки, бронепоезда и дризин танки, которые помогут вам добраться до самых отдаленных уголков метро и выжить в оклановых сражениях и боевых зонах. Мир метро является экономически живым, каждая станция и фракция управляет своей частью метро и производит тот или иной товар, который можно купить в метро. Однако, метро это не место для слабых духом, каждая вылазка будь то в танель или на поверхность может быть последней. Не забудьте о аномалиях, которые представляют собой опасность и могут поджидать где угодно.В Метро Онлайн вам предстоит не только выжить, но и захватить контроль над различными областями метро, защищая свои точки и расширяя свою базу. Вы можете присоединиться к одной из существующих фракций или создать свою собственную, и вместе с другими игроками бороться за власть в метро. В Метро Онлайн каждый игрок может найти свое место и создать свою историю в этом опасном и загадочном мире.</p>
       </div>
       <div id="featured-content">
@@ -34,7 +34,7 @@
 </body>
 <footer>
   <ul>
-    <li><a href="https://www.facebook.com/yourusername">Facebook</a></li>
+    <li><a href="https://www.instagram.com/p/ClQXdZkqPOx/?igshid=MDJmNzVkMjY=">Facebook</a></li>
     <li><a href="https://twitter.com/yourusername">Twitter</a></li>
     <li><a href="https://www.instagram.com/yourusername">Instagram</a></li>
    </ul>
